Add quick link in jupyter notebook

--- a/static/backend/index.ipynb
+++ b/static/backend/index.ipynb
@@ -72,6 +72,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Quick Link:\n",
+        "\n",
+        "Use the link below to see the implementation of the scoring functions. You can add or modify the current scoring methods or features.\n",
+        "\n",
+        "[LLM Judge Score](#calculate-text-quality)\n",
+        "\n",
+        "[Semantic Score](#calculate-semantic-score)\n",
+        "\n",
+        "[Feature Implementations](#calculate-features)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 194,
       "metadata": {
