--- a/static/backend/index.ipynb
+++ b/static/backend/index.ipynb
@@ -61,13 +61,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 238,
+      "execution_count": null,
       "metadata": {
         "id": "OKRHUw8tTbT7"
       },
       "outputs": [],
       "source": [
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"YOUR_KEY\"\n",
         "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
       ]
     },
